--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CGraph)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_library(CGraph library.cpp library.h src/graph/Edge.h src/graph/DefaultEdge.h src/graph/WeightedEdge.h src/graph/Graph.h src/graph/Vertex.h)
+add_library(CGraph library.cpp library.h src/graph/Edge.h src/graph/DefaultEdge.h src/graph/WeightedEdge.h src/graph/Graph.h src/graph/Vertex.h src/graph/fixed_directed_sparse_graph_lib.h src/graph/fixed_directed_dense_graph_lib.h)
