add node iterator for four kinds graphs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "utility": "cpp",
         "__locale": "cpp",
         "locale": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__bit_reference": "cpp"
     }
 }
