modify some bugs
graph reference in node_state;
shortest path

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,8 @@
         "__locale": "cpp",
         "locale": "cpp",
         "algorithm": "cpp",
-        "__bit_reference": "cpp"
+        "__bit_reference": "cpp",
+        "chrono": "cpp",
+        "list": "cpp"
     }
 }
